QPIDJMS-311 Fixes to enable build and test on JDK9
* Update Mockito to 2.8.47+
* Update Jacoco to 0.7.9+
* Use Base64 in Scram-SHA mechanism
* Fix failing Mockito based tests
* Fix deprecation warnings